--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,9 @@
     "*://*.strava.com/activities/*",
     "*://*.strava.com/segments/*",
     "system.storage",
-    "downloads"
+    "downloads",
+    "webRequest",
+    "webRequestBlocking"
   ],
   "author": "Jelle Buitenhuis",
   "homepage_url": "https://www.jellebuitenhuis.nl/",
@@ -26,6 +28,6 @@
     "scripts": ["background.js"],
     "matches": ["*://*.strava.com/activities/*","*://*.strava.com/segments/*"]
   },
-  "web_accessible_resources": ["injected.js","inject.js","background.js"],
+  "web_accessible_resources": ["jquery.js","injected.js","inject.js","background.js"],
   "manifest_version": 2
 }
