--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,18 +9,14 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      
-      - uses: thedoctor0/zip-release@master
-        with:
-          filename: 'StravaExtension.zip'
-          exclusions: '.git/* .gitignore .github/* README.md'
-          path: .
+    - uses: actions/checkout@master
+    - name: Archive Release
+      uses: thedoctor0/zip-release@master
+      with:
+        filename: 'release.zip'
+        exclusions: '*.git* README.md'
