--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
           dest: result.zip
       - uses: actions/upload-artifact@v2
         with:
-          name: test
-          path: result.zip
+          name: result.zip
+          path: result.txt
