--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
   "content_scripts": [{
     "matches": ["*://*.strava.com/*"],
     "run_at": "document_end",
-    "all_frames": false,
+    "all_frames": true,
     "js": ["inject.js"]
   }],
   "background": {
