--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "description": "Better Strava",
   "scripts": {
-    "test": "test"
+    "test": "npx cypress run -b chrome"
   },
   "repository": {
     "type": "git",
